--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v4
-        with:
-          version: 8.8.0
+        #with:
+        #  version: 8.8.0
 
       - name: Setup Node
         uses: actions/setup-node@v3
