--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,45 @@
-name: Release
 on:
-  workflow_run:
-    workflows: ["ci"]
-    types:
-      - completed
+  push:
     branches:
       - master
-permissions:
-  contents: write # to be able to publish a GitHub release
-  issues: write # to be able to comment on released issues
-  pull-requests: write # to be able to comment on released pull requests
-  id-token: write # to enable use of OIDC for tru
-jobs:
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          persist-credentials: false
 
+permissions:
+  contents: write
+  pull-requests: write
+  id-token: write
+
+name: release-please
+
+jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: 'https://registry.npmjs.org'
+        if: ${{ steps.release.outputs.release_created }}
+      # Upgrade NPM to latest version
+      - run: sudo npm install -g npm
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          release-type: node
+          package-name: "@workadventure/simple-peer"
+      # The logic below handles the npm publication:
+      - uses: actions/checkout@v2
+          # these if statements ensure that a publication only occurs when
+        # a new release is created:
+        if: ${{ steps.release.outputs.release_created }}
       - name: Setup PNPM
         uses: pnpm/action-setup@v4
         with:
           version: 8.8.0
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-
-      # upgrade NPM to a version compatible with Trusted Packages
-      - run: npm install -g npm@11
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build
-        run: pnpm run build
-
-      - name: Release
+      - run: pnpm install
+        if: ${{ steps.release.outputs.release_created }}
+      - run: pnpm run build
+        if: ${{ steps.release.outputs.release_created }}
+      - run: pnpm publish --access public
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: npx semantic-release
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        if: ${{ steps.release.outputs.release_created }}
